# Thirstys_Game-Studio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.md  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  gradlew  gradlew.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.gradle  setup.ps1  setup.py  setup.sh
.github/workflows/: agent_team.yml  android-ci.yml  android_build.yml
agent/: __init__.py  runner.py
agent/community/: __init__.py  pipeline.py
agent/comparative/: __init__.py  age_of_origins.py
agent/core/: __init__.py  interfaces.py
agent/integration/: __init__.py
app/: build.gradle
docs/: DEVELOPMENT_SETUP.md  TEAM_AGENT_DESIGN.md
output/: app_data.json  community_insights.json  drafted_issues.json  f2p_policy.md  pr_template.md  proposals.json  run_summary_20251201_153558.json  run_summary_20251217_064308.json  run_summary_20251218_064244.json  run_summary_20251219_064121.json  run_summary_20251220_063932.json  run_summary_20251221_063956.json  run_summary_20251222_064543.json  run_summary_20251223_064512.json  run_summary_20251224_064424.json  run_summary_20251225_064306.json  run_summary_20251226_064217.json  run_summary_20251227_064036.json  run_summary_20251228_064057.json  run_summary_20251229_064712.json  run_summary_20251230_064301.json  run_summary_20251231_064416.json  run_summary_20260101_064410.json  run_summary_20260102_064432.json  run_summary_20260103_064057.json  run_summary_20260104_064127.json  run_summary_20260105_065106.json  run_summary_20260106_064628.json  run_summary_20260107_064515.json  run_summary_20260108_064554.json  run_summary_20260109_064545.json  run_summary_20260110_064001.json  run_summary_20260111_064142.json  run_summary_20260112_064918.json  run_summary_20260113_064544.json  run_summary_20260114_064605.json  run_summary_20260115_064518.json  run_summary_20260116_064523.json  run_summary_20260117_064023.json  run_summary_20260118_064055.json
tests/: README.md  __init__.py  conftest.py  test_runner.py
(+51 files in other folders)
