[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirstys-game-studio-agent"
version = "0.1.0"
description = "Multi-agent orchestration system for game development community insights"
readme = "README.md"
authors = [
    {name = "Thirsty's Game Studio"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "praw>=7.7.1",
    "discord.py>=2.3.2",
    "requests>=2.31.0",
    "textblob>=0.17.1",
    "spacy>=3.7.0",
]

[project.scripts]
thirsty-agent = "agent.runner:main"

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Thirstys_Game-Studio"
Repository = "https://github.com/IAmSoThirsty/Thirstys_Game-Studio"
"Bug Tracker" = "https://github.com/IAmSoThirsty/Thirstys_Game-Studio/issues"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | android
  | cpp
  | dotnet
  | web
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=agent --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "android/",
    "cpp/",
    "dotnet/",
    "web/",
    "build/",
    "dist/",
]
